<resources>
    <string name="app_name">足球视频预约系统</string>
    <string name="status">状态</string>
    <string name="url">链接</string>
    <string name="operation">操作</string>
    <string name="time">时间</string>
    <string name="user">用户</string>
    <string name="assignment">预约</string>
    <string name="video">视频</string>
    <string name="refresh">刷新</string>
    <string name="video_name">视频名称</string>
    <string name="video_date">日期</string>
    <string name="game_date">日期</string>
    <string name="order_id">预定编号</string>
    <string name="cancel_succeeded">取消成功</string>
    <string name="delete_order">取消预约</string>
    <string name="edit_video">编辑视频</string>
    <string name="video_url">链接</string>
    <string name="modify_user_info">更改用户信息</string>
    <string name="user_info_changed">用户信息已更改</string>
    <string name="modify_password">更改用户密码</string>
    <string name="create_team">创建队伍</string>
    <string name="modify_team_member">管理队伍</string>
    <string name="captain_deleted_error">不可删除队长</string>
    <string name="check_my_video">查看我的视频</string>
    <string name="check_my_order">查看我的预约</string>
    <string name="title_activity_login">登陆</string>
    <string name="limit">权限</string>
    <string name="team">队伍</string>
    <string name="team_name">队伍名称</string>
    <string name="game_name">比赛名称</string>
    <string name="game_location">比赛地点</string>
    <string name="game_hilight">比赛集锦</string>
    <string name="game_owner">所有者</string>
    <string name="team_captain">队长</string>
    <string name="add_teammate">添加队员</string>
    <string name="teammate_added">队员已添加</string>
    <string name="new_teammate_username">新用户－用户名:</string>
    <string name="delete_teammate">删除队员</string>
    <string name="teammate_deleted">队员已删除</string>
    <string name="order">预约</string>
    <string name="logout">登出</string>
    <string name="symbol_0"> : </string>
    <string name="symbol_1"> - </string>
    <string name="public_videos"> 公共视频 </string>
    <string name="private_videos"> 私人视频 </string>
    <string name="team_added"> 队伍已创建 </string>
    <string name="login_failed_error">登陆信息失效</string>
    <string name="lack_parameter_error">缺少参数</string>
    <string name="not_exist_error">错误参数（队名，用户名，队长等不存在）</string>
    <string name="data_error">参数数据有误（时间，日期等不符合要求）</string>
    <string name="priorit_error">权限不足</string>
    <string name="no_order_error">没有预约</string>
    <string name="no_video_error">没有视频</string>
    <string name="team_name_None_error">队伍名不能为"None"</string>
    <string name="error_order_time">时间有误（开始时间不得晚于结束时间）</string>
    <string name="order_succeeded">预约成功</string>
    <string name="order_conflict_error">预约时间与已有预约有冲突</string>
    <string name="order_right_error">您必须为改队队长且该队队员数量超过10个</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码 </string>
    <string name="prompt_old_password">旧密码 </string>
    <string name="prompt_new_password">新密码 </string>
    <string name="prompt_confirm">重新输入新密码</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_email">邮箱</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_modify_password">更改密码</string>
    <string name="action_modify_user_info">更改信息</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="back_to_login">返回登陆</string>
    <string name="login_suceeded">登陆成功</string>
    <string name="register_suceeded">注册成功</string>
    <string name="password_changed">密码已经更改，请重新登陆</string>
    <string name="login_failed">登陆失败（用户名或者密码错误）</string>
    <string name="error_wrong_confirm">确认密码与新密码不一致</string>
    <string name="error_wrong_username">用户名不存在</string>
    <string name="error_existed_username">用户名已经被占用</string>
    <string name="error_unkown">不知名错误发生了</string>
    <string name="error_invalid_email">邮箱地址有误</string>
    <string name="error_invalid_password">密码长度不符合要求（要求长8-16字符）</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此区域需要填写</string>
    <string name="UserTitle">欢迎!</string>
</resources>
