<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:gravity="center"/>

    <EditText
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_location"
        android:gravity="center"/>

    <EditText
        android:id="@+id/game_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_location"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:gravity="center"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Spinner
            android:id="@+id/spinner_start_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_0"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/spinner_start_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_1"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/spinner_end_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_0"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/spinner_end_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/Limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limit"
        android:gravity="center"/>
    <Spinner
        android:id="@+id/spinner_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:gravity="center"/>
    <Spinner
        android:id="@+id/spinner_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/order" />

</LinearLayout>