<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin">

<!-- Login progress -->

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserTitle"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/Line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modifyUserInfo"
                        style="?android:textAppearanceSmall"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/modify_user_info"
                        android:textStyle="bold"
                        android:background="@color/icon"/>

                    <Button
                        android:id="@+id/modifyPassword"
                        style="?android:textAppearanceSmall"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/modify_password"
                        android:textStyle="bold"
                        android:background="@color/icon"/>

                    <Button
                        android:id="@+id/creatTeam"
                        style="?android:textAppearanceSmall"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/create_team"
                        android:textStyle="bold"
                        android:background="@color/icon"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/checkMyVideo"
                        style="?android:textAppearanceSmall"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/check_my_video"
                        android:textStyle="bold"
                        android:background="@color/icon"/>

                    <Button
                        android:id="@+id/checkMyOrder"
                        style="?android:textAppearanceSmall"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/check_my_order"
                        android:textStyle="bold"
                        android:background="@color/icon"/>

                    <Button
                        android:id="@+id/modifyTeamMember"
                        style="?android:textAppearanceSmall"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/modify_team_member"
                        android:textStyle="bold"
                        android:background="@color/icon"/>

                </LinearLayout>

                <Button
                    android:id="@+id/logout"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/logout"
                    android:textStyle="bold"
                    android:background="@color/icon"/>
            </LinearLayout>


        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>