<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp">

    <ScrollView
        android:id="@+id/scrollView_order_list"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/order_list_table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TableRow
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/game_date"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/game_date"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/order_id"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/order_id"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/game_name"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/game_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/game_location"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/game_location"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/team_name"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/operation"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/operation"
                        android:textSize="20sp" />

                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>


</LinearLayout>